--- a/game/index.html
+++ b/game/index.html
@@ -7,6 +7,11 @@
     <style>
         body { margin: 0; }
         canvas { display: block; }
+        #config-menu { display: none; position: absolute; top: 10%; left: 50%; transform: translateX(-50%); background: white; padding: 20px; border: 1px solid black; }
+        .question { margin-bottom: 20px; }
+        .options { list-style-type: none; padding: 0; }
+        .options li { cursor: pointer; padding: 10px; background: #eee; margin-bottom: 5px; }
+        .options li:hover { background: #ccc; }
     </style>
     <script type="importmap">
         {
@@ -18,6 +23,11 @@
       </script>
 </head>
 <body>
+    <div id="config-menu">
+        <div id="question-container" class="question"></div>
+        <ul id="options-container" class="options"></ul>
+    </div>
     <script type="module" src="main.js"></script>
+   
 </body>
 </html>
