--- a/game/index.html
+++ b/game/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pong Game with Three.js</title>
     <style>
+      #info > * {
+			max-width: 650px;
+			margin-left: auto;
+			margin-right: auto;
+		  }
         body { margin: 0; }
         canvas { display: block; }
         #config-menu { display: none; position: absolute; top: 10%; left: 50%; transform: translateX(-50%); background: white; padding: 20px; border: 1px solid black; }
