--- a/game/index.html
+++ b/game/index.html
@@ -17,6 +17,10 @@
         .options { list-style-type: none; padding: 0; }
         .options li { cursor: pointer; padding: 10px; background: #eee; margin-bottom: 5px; }
         .options li:hover { background: #ccc; }
+        /*countdown au milieu de l'ecran en gros*/
+        #countdownDisplay {
+            position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 100px; font-weight: bold; color: #fff; padding: 20px; border-radius: 10px;
+        }
     </style>
     <script type="importmap">
         {
@@ -31,7 +35,8 @@
     <div id="config-menu">
         <div id="question-container" class="question"></div>
         <ul id="options-container" class="options"></ul>
-    </div>
+      </div>
+    <div id="countdownDisplay"></div>
     <script type="module" src="main.js"></script>
    
 </body>
