--- a/game/index.html
+++ b/game/index.html
@@ -18,8 +18,22 @@
         .options li { cursor: pointer; padding: 10px; background: #eee; margin-bottom: 5px; }
         .options li:hover { background: #ccc; }
         /*countdown au milieu de l'ecran en gros*/
+        @keyframes countdownEffect {
+          0% { color: rgb(255, 255, 255); transform: translate(-50%, -50%) scale(1) translate(-50%, -50%);}
+          50% { color: rgba(255, 255, 255, 0.856); transform: translate(-50%, -50%) scale(0.75) translate(-50%, -50%);}
+          100% { color: rgba(255, 255, 255, 0.704); transform: translate(-50%, -50%) scale(0.5) translate(-50%, -50%);}
+        }
         #countdownDisplay {
-            position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 100px; font-weight: bold; color: #fff; padding: 20px; border-radius: 10px;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          font-size: 100px;
+          font-weight: bold;
+          color: #fff;
+          padding: 20px;
+          border-radius: 10px;
+          animation: countdownEffect 1s infinite;
         }
     </style>
     <script type="importmap">
