--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,8 @@
 
     <title>Main</title>
 
-	<link rel="stylesheet" href="/frontend/custom_css/main.css" />
-	<script type="module" src="/frontend/js/logic/router.js"></script>
+	<link rel="stylesheet" href="./custom_css/main.css" />
+	<script type="module" src="./js/logic/router.js"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
@@ -16,10 +16,10 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 	
 	<!-- NAVBAR -->
-	<nav class="navbar sticky-top navbar-expand-md navbar-light bg-custom-blue-dark">
+	<nav id="topbar__home" class="navbar sticky-top navbar-expand-md navbar-light">
 		<div class="container-fluid">
-			<button id="topbar__home" class="px-2 btn nav__item" value="index">
-				<img src="/frontend/img/golden-moustache.png" alt="Main" class="dropdown-item" width="50" height="50"/>
+			<button class="px-2 btn nav__item" value="index">
+				<img src="./img/golden-moustache.png" alt="Main" class="dropdown-item" width="40" height="40"/>
 			</button>
 			<div class="collapse navbar-collapse justify-content-end align-items-center"
 			id="main-nav">
@@ -48,5 +48,16 @@
 			</div>
 		</div>
 	</nav>
+	</div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-1 min-vh-100 px-0" id="sidebar__left">
+			</div>
+			<div class="col-10 container" id="main__content">
+			</div>
+			<div class="col-1 min-vh-100 px-0" id="sidebar__right">
+			</div>
+		</div>
+	</div>
   </body>
 </html>
