--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Main</title>
 
 	<link rel="stylesheet" href="./custom_css/main.css" />
-	<script type="module" src="./js/logic/router.js"></script>
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
@@ -16,32 +16,36 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 	
 	<!-- NAVBAR -->
-	<nav id="topbar__home" class="navbar sticky-top navbar-expand-md navbar-light">
+	<nav id="topbar__home" class="navbar sticky-top navbar-expand-sm navbar-light">
 		<div class="container-fluid">
 			<button class="px-2 btn nav__item" value="index">
 				<img src="./img/golden-moustache.png" alt="Main" class="dropdown-item" width="40" height="40"/>
 			</button>
+			<!-- toggle button for mobile nav -->
+			<button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			  </button>
 			<div class="collapse navbar-collapse justify-content-end align-items-center"
 			id="main-nav">
 
 				<!-- NAVBAR LINKS -->
 				<ul class="nav nav-pills">
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Game</a>
+						<a class="nav-link dropdown-toggle text-white" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Game</a>
 						<ul class="dropdown-menu">
 							<li><a class="dropdown-item" value="twoplayers">Local</a></li>
 							<li><a class="dropdown-item" value="twoplayersonline">Online</a></li>
 						</ul>
 					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Profile</a>
+						<a class="nav-link dropdown-toggle text-white" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Profile</a>
 						<ul class="dropdown-menu">
 							<li><a class="dropdown-item" value="gamehistory">Match History</a></li>
 							<li><a class="dropdown-item" value="stats">Stats</a></li>
 							<li><a class="dropdown-item" value="updateinfo">Update User info</a></li>
 						</ul>
 					</li>
-					<li class="nav-item ms-2 d-none d-md-inline">
+					<li class="nav-item ms-2 d-md-inline">
 						<a class="btn btn-dark" id="logout">Logout</a>
 					</li>
 				</ul>
@@ -49,15 +53,17 @@
 		</div>
 	</nav>
 	</div>
+	<!-- MAIN CONTENT -->
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-1 min-vh-100 px-0" id="sidebar__left">
 			</div>
-			<div class="col-10 container" id="main__content">
+			<div class="col-10 container bg-dark text-white" id="main__content">
 			</div>
 			<div class="col-1 min-vh-100 px-0" id="sidebar__right">
 			</div>
 		</div>
 	</div>
+	<script type="module" src="./js/logic/router.js"></script>
   </body>
 </html>
