--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,20 +33,20 @@
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle text-white" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Game</a>
 						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" value="twoplayers">Local</a></li>
-							<li><a class="dropdown-item" value="twoplayersonline">Online</a></li>
+							<li><button class="dropdown-item nav__item" value="ponglocal">Local</button></li>
+							<li><button class="dropdown-item nav__item" value="pongonline">Online</button></li>
+							<li><button class="dropdown-item nav__item" value="gamehistory">Game History</button></li>
 						</ul>
 					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle text-white" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Profile</a>
+						<a class="nav-link dropdown-toggle text-white" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">User</a>
 						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" value="gamehistory">Match History</a></li>
-							<li><a class="dropdown-item" value="stats">Stats</a></li>
-							<li><a class="dropdown-item" value="updateinfo">Update User info</a></li>
+							<li><button class="dropdown-item nav__item" value="userinfo">Profile</button></li>
+							<li><button class="dropdown-item nav__item" value="stats">Stats</button></li>
 						</ul>
 					</li>
 					<li class="nav-item ms-2 d-md-inline">
-						<a class="btn btn-dark" id="logout">Logout</a>
+						<button class="btn nav__item btn-dark" id="logout" value="logout">Logout</button>
 					</li>
 				</ul>
 			</div>
@@ -62,6 +62,11 @@
 			</div>
 			<div class="col-1 min-vh-100 px-0" id="sidebar__right">
 			</div>
+		</div>
+	</div>
+	<div class="container-fluid px-0">
+		<div id="footer" class="row">
+			<div class="text-center">©2024 Moustache N Dance @ 42Lausanne</div>
 		</div>
 	</div>
 	<script type="module" src="./js/logic/router.js"></script>
