--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Main</title>
-
-	<link rel="stylesheet" href="./custom_css/main.css" />
-
+	
+	<style>
+		#topbar__home, #sidebar__left, #sidebar__right, #footer {background-color: black;}
+		
+	</style>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
@@ -19,7 +21,7 @@
 	<nav id="topbar__home" class="navbar sticky-top navbar-expand-sm navbar-light">
 		<div class="container-fluid">
 			<button class="px-2 btn nav__item" value="index">
-				<img src="./img/golden-moustache.png" alt="Main" class="dropdown-item" width="40" height="40"/>
+				<img src="/frontend/img/golden-moustache.png" id ="image" alt="Main" class="dropdown-item" width="40" height="40"/>
 			</button>
 			<!-- toggle button for mobile nav -->
 			<button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,6 +71,6 @@
 			<div class="text-center">©2024 Moustache N Dance @ 42Lausanne</div>
 		</div>
 	</div>
-	<script type="module" src="./js/logic/router.js"></script>
+	<script type="module" src="/frontend/js/logic/router.js"></script>
   </body>
 </html>
