--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,7 +55,7 @@
 						</ul>
 					</li>
 					<li class="nav-item ms-2 d-md-inline">
-						<button class="btn nav__item btn-dark" id="logout" value="logout">Logout</button>
+						<button class="btn nav__item btn-dark" id="login" value="login">Login</button>
 					</li>
 				</ul>
 			</div>
@@ -75,7 +75,7 @@
 	</div>
 	<div class="container-fluid px-0">
 		<div id="footer" class="row">
-			<div class="text-center">©2024 Moustache N Dance @ 42Lausanne</div>
+			<div class="text-center">©2024 Moustache & Dance @ 42Lausanne</div>
 		</div>
 	</div>
 	<script type="module" src="/frontend/js/logic/router.js"></script>
