Add shortcut icon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Main</title>
+
+	<link href="/frontend/img/icon.jpeg" rel="icon" type="image/jpeg">
+	<link href="/frontend/img/icon.jpeg" rel="shortcut icon" type="image/jpeg">
 	
 	<style>
 		#topbar__home, #sidebar__left, #sidebar__right, #footer {background-color: black;}
