Login page OK + Change Display Welcome & Game Menu + Add User Info page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Main</title>
+    <title>Moustache & Dance</title>
 
 	<link href="/frontend/img/icon.jpeg" rel="icon" type="image/jpeg">
 	<link href="/frontend/img/icon.jpeg" rel="shortcut icon" type="image/jpeg">
