`chore: Update npm dependencies for ws package and creating wss'`

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,8 @@
         {
           "imports": {
             "three": "https://cdn.jsdelivr.net/npm/three@0.166.1/build/three.module.js",
-            "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.166.1/examples/jsm/"
+            "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.166.1/examples/jsm/",
+			"uuid": "https://cdn.jsdelivr.net/npm/uuid@9.0.0/dist/esm-browser/index.js"
           }
         }
     </script>
