--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,8 +48,7 @@
 						<a class="nav-link dropdown-toggle text-white" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Game</a>
 						<ul class="dropdown-menu">
 							<li><button class="dropdown-item nav__item" value="ponglocal">Local</button></li>
-							<li><button class="dropdown-item nav__item" value="pongonline">Online</button></li>
-							<li><button class="dropdown-item nav__item" value="gamehistory">Game History</button></li>
+							<li><button class="dropdown-item nav__item" value="pongonline">Online with Friends</button></li>
 						</ul>
 					</li>
 					<li class="nav-item dropdown">
