`refactor: Add Pong Tournament view and logic`

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,6 +48,7 @@
 						<ul class="dropdown-menu">
 							<li><button class="dropdown-item nav__item" value="ponglocal">Local</button></li>
 							<li><button class="dropdown-item nav__item" value="pongonline">Online</button></li>
+							<li><button class="dropdown-item nav__item" value="pongtournament">Tournoi</button></li>
 							<li><button class="dropdown-item nav__item" value="gamehistory">Game History</button></li>
 						</ul>
 					</li>
