Add LoadGameStat + Disable Online/Tournament if not login + Add Limitation for 42profile

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,15 +48,14 @@
 						<a class="nav-link dropdown-toggle text-white" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Game</a>
 						<ul class="dropdown-menu">
 							<li><button class="dropdown-item nav__item" value="ponglocal">Local</button></li>
-							<li><button class="dropdown-item nav__item" value="pongonline">Online</button></li>
-							<li><button class="dropdown-item nav__item" value="pongtournament">Tournoi</button></li>
+							<li><button class="dropdown-item nav__item log__item" disabled="true" value="pongonline">Online</button></li>
+							<li><button class="dropdown-item nav__item log__item" disabled="true" value="pongtournament">Tournoi</button></li>
 						</ul>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle text-white" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">User</a>
 						<ul class="dropdown-menu">
-							<li><button class="dropdown-item nav__item" value="userinfo">Profile</button></li>
-							<li><button class="dropdown-item nav__item" value="stats">Stats</button></li>
+							<li><button class="dropdown-item nav__item log__item" disabled="true" value="userinfo">Profile</button></li>
 						</ul>
 					</li>
 					<li class="nav-item ms-2 d-md-inline">
